--- a/app/src/main/res/layout/demande_covoitureur_item.xml
+++ b/app/src/main/res/layout/demande_covoitureur_item.xml
@@ -81,24 +81,23 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_modifier"
-            android:layout_width="match_parent"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_margin="@dimen/activity_vertical_margin"
             android:gravity="center"
-            android:text="@string/modifier"
-            android:textSize="10dp"
+            android:padding="10dp"
             android:textColor="@color/white"
-            android:background="@drawable/btn_shape_capsule"/>
+            android:background="@drawable/btn_shape_capsule" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_supprimer"
-            android:layout_width="match_parent"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:textSize="10dp"
+            android:layout_margin="@dimen/activity_vertical_margin"
+            android:padding="10dp"
             android:gravity="center"
-            android:text="@string/Supprimer"
             android:textColor="@color/white"
             android:background="@drawable/btn_shape_capsule"/>
 
