--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         android:layout_height="40dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/btn_shape_capsule"
-        android:text="Sign in"
+        android:text="Se connecter"
         app:layout_constraintEnd_toEndOf="@+id/mdpField"
         app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="@+id/mdpField"
@@ -74,7 +74,7 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="36dp"
         android:linksClickable="true"
-        android:text="Forgotten password?"
+        android:text="Mot de passe oublié ?"
         android:textColor="#96eacc"
         android:textColorLink="#96eacc"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +86,7 @@
         android:layout_height="28dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="36dp"
-        android:text="Sign up"
+        android:text="S'inscrire"
         android:textColor="#96eacc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
