--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,19 +55,7 @@
         app:layout_constraintStart_toStartOf="@+id/emailField"
         app:layout_constraintTop_toBottomOf="@+id/emailField" />
 
-    <Button
-        android:id="@+id/btnConnect"
-        android:layout_width="184dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="52dp"
-        android:background="@drawable/btn_shape_capsule"
-        android:text="Se connecter"
-        app:layout_constraintEnd_toEndOf="@+id/mdpField"
-        app:layout_constraintHorizontal_bias="0.466"
-        app:layout_constraintStart_toStartOf="@+id/mdpField"
-        app:layout_constraintTop_toBottomOf="@+id/mdpField" />
-
-    <TextView
+    <!--<TextView
         android:id="@+id/btnReset"
         android:layout_width="162dp"
         android:layout_height="29dp"
@@ -78,18 +66,39 @@
         android:textColor="#96eacc"
         android:textColorLink="#96eacc"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnConnect" />
+        app:layout_constraintTop_toBottomOf="@+id/btnConnect" />-->
 
-    <TextView
+    <Button
+        android:id="@+id/btnConnect"
+        android:layout_width="244dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="52dp"
+        android:background="@drawable/btn_shape_capsule"
+        android:text="Se connecter"
+        app:layout_constraintEnd_toEndOf="@+id/mdpField"
+        app:layout_constraintHorizontal_bias="0.32"
+        app:layout_constraintStart_toStartOf="@+id/mdpField"
+        app:layout_constraintTop_toBottomOf="@+id/mdpField" />
+
+    <!-- <TextView
         android:id="@+id/btnInscrire"
         android:layout_width="139dp"
         android:layout_height="28dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="36dp"
         android:text="S'inscrire"
         android:textColor="#96eacc"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        tools:layout_editor_absoluteX="72dp"
+        tools:layout_editor_absoluteY="671dp" />-->
+
+    <Button
+        android:id="@+id/btnInscrire"
+        android:layout_width="244dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="52dp"
+        android:background="@drawable/btn_shape_capsule"
+        android:text="S'inscrire"
+        app:layout_constraintEnd_toEndOf="@+id/btnConnect"
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintStart_toStartOf="@+id/btnConnect"
         app:layout_constraintTop_toBottomOf="@+id/btnConnect" />
 
     <ProgressBar
@@ -97,12 +106,11 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="60dp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toStartOf="@+id/btnInscrire"
-        app:layout_constraintHorizontal_bias="0.701"
-        app:layout_constraintStart_toStartOf="@+id/btnReset"
-        app:layout_constraintTop_toBottomOf="@+id/btnReset" />
+        app:layout_constraintEnd_toEndOf="@+id/btnInscrire"
+        app:layout_constraintStart_toStartOf="@+id/btnInscrire"
+        app:layout_constraintTop_toBottomOf="@+id/btnInscrire" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
